esimerkkejä päivitetty